--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /db/*.sqlite3
 /db/*.sqlite3-journal
 
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -19,3 +20,5 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+config/database.yml
